--- a/poc/src/main/resources/application.properties
+++ b/poc/src/main/resources/application.properties
@@ -3,9 +3,7 @@
 #spring.data.mongodb.host=localhost
 
 
-spring.data.mongodb.host=127.0.0.1
-spring.data.mongodb.port=27017
-#spring.data.mongodb.authentication-database=admin
-#spring.data.mongodb.username=password123
-#spring.data.mongodb.password=username456
+#spring.data.mongodb.host=127.0.0.1
+#spring.data.mongodb.port=27017
 spring.data.mongodb.database=POC
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017
